--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.9"
 pyrogram = "^2.0.106"
 tgcrypto = "^1.2.5"
 python-dotenv = "^1.0.0"
-sqlalchemy = "^2.0.16"
+sqlmodel = "^0.0.8"
 
 
 [tool.poetry.group.dev.dependencies]
