--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ python = "^3.9"
 pyrogram = "^2.0.106"
 tgcrypto = "^1.2.5"
 python-dotenv = "^1.0.0"
-sqlmodel = "^0.0.8"
+pytelegrambotapi = "^4.12.0"
+aiohttp = "^3.8.4"
+pyromod = "^2.0.0"
+sqlalchemy = "^2.0.16"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +23,7 @@ pytest-cov = "^4.1.0"
 blue = "^0.9.1"
 isort = "^5.12.0"
 taskipy = "^1.11.0"
+python-lsp-server = "^1.7.3"
 
 [build-system]
 requires = ["poetry-core"]
